# optimization-methods

./: .gitignore  CMakeLists.txt  DichotomyOptimizationMethod.cpp  DichotomyOptimizationMethod.h  OptimizationMethod.cpp  OptimizationMethod.h  OptimizationMethodDetailedResults.cpp  Point.h  README.md  WebBindings.cpp
core/: CMakeLists.txt  OptimizationMethod.cpp  OptimizationMethod.h  OptimizationMethodDetailedResults.cpp  OptimizationMethodDetailedResults.h  Point.h  Utils.cpp  Utils.h  main.cpp
core/methods/: Brent.cpp  Brent.h  Dichotomy.cpp  Dichotomy.h  Fibonacci.cpp  Fibonacci.h  GoldenRatio.cpp  GoldenRatio.h  Parabola.cpp  Parabola.h
lab1/: WebBindings.cpp
lab1/core/: CMakeLists.txt  OptimizationMethod.cpp  OptimizationMethodDetailedResults.h  main.cpp
lab1/core/methods/: Brent.cpp  Brent.h  Fibonacci.cpp  GoldenRatio.cpp
lab1/report/tex/: main.tex
lab1/web/src/: core.wasm.map  renderUtils.js  styles.scss  utils.js
lab2/: CMakeLists.txt  GradientMethod.cpp  GradientMethod.h  GradientMethodDetailedResult.h  Matrix.cpp  Matrix.h  SquareMatrix.cpp  Vector.cpp  Vector.h  WebBindings.cpp
lab2/core/: CMakeLists.txt  DiagonalMatrix.cpp  DiagonalMatrix.h  GradientMethod.h  GradientMethodDetailedResult.cpp  Matrix.cpp  Matrix.h  QuadraticFunction.cpp  QuadraticFunction.h  SquareMatrix.h  Utils.cpp  Utils.h  Vector.cpp  Vector.h  main.cpp
lab2/core/methods/: ConjugateGradientMethod.cpp  ConjugateGradientMethod.h  GradientDescent.cpp  GradientDescent.h  GradientSteepestDescent.cpp  GradientSteepestDescent.h
lab2/methods/: ConjugateGradientMethod.cpp  GradientDescent.cpp
lab2/report/tex/: main.tex
lab2/web/src/: core.js  core.wasm  index.html  index.js  methods.js  renderUtils.js
lab3/core/: CMakeLists.txt  generator.cpp  solver.cpp
lab3/core/generators/: DiagonallyDominantGenerator.cpp  DiagonallyDominantGenerator.h  Generator.cpp  Generator.h  HilbertGenerator.cpp  HilbertGenerator.h  SymmetricDiagonallyDominantGenerator.cpp  SymmetricDiagonallyDominantGenerator.h  Utils.cpp  Utils.h
lab3/core/generators/sparse_row_column/: DiagonallyDominantGenerator.h  HilbertGenerator.h  InverseSignGenerator.cpp  InverseSignGenerator.h  SimpleGenerator.cpp  SimpleGenerator.h
lab3/core/generators/symmetric_profile/: DiagonallyDominantGenerator.h  HilbertGenerator.cpp  HilbertGenerator.h
lab3/core/matrices/: DenseMatrix.cpp  DenseMatrix.h  LUWrapperMatrix.cpp  LUWrapperMatrix.h  Matrix.h  Serializers.h  SparseRowColumnMatrix.cpp  SparseRowColumnMatrix.h  SymmetricProfileMatrix.cpp  SymmetricProfileMatrix.h  SymmetricSparseRowColumnMatrix.cpp  SymmetricSparseRowColumnMatrix.h
lab3/core/solvers/: ConjugateGradientInPlaceSolver.cpp  ConjugateGradientInPlaceSolver.h  GaussPivotingInPlaceSolver.cpp  GaussPivotingInPlaceSolver.h  LUInPlaceSolver.cpp  LUInPlaceSolver.h  LinearSystem.cpp  LinearSystem.h  Solver.cpp  Solver.h  VectorUtils.cpp  VectorUtils.h
lab3/core/tests/: ConjugateGradientInPlaceSolverTests.cpp  GaussPivotingInPlaceSolverTests.cpp  LUInPlaceSolverTests.cpp  SparseRowColumnTest.cpp  SymmetricProfileMatrixTests.cpp  SymmetricSparseRowColumnTest.cpp  Utils.cpp  Utils.h
lab3/report/tex/: main.tex
lab4/: WebBindings.cpp
lab4/core/: CMakeLists.txt  ExampleFunctions.h  HypeOptimizationMethod.h  ScalarFunction.h  main.cpp
lab4/core/methods/: AbstractNewtonMethod.cpp  AbstractNewtonMethod.h  BfgshMethod.cpp  BfgshMethod.h  ClassicNewtonMethod.cpp  ClassicNewtonMethod.h  DescentNewtonMethod.cpp  DescentNewtonMethod.h  LinearSearchNewtonMethod.cpp  LinearSearchNewtonMethod.h  MarquardtCholeskyMethod.cpp  MarquardtCholeskyMethod.h  MarquardtMethod.cpp  MarquardtMethod.h  PowellMethod.cpp  PowellMethod.h  Utils.cpp  Utils.h
lab4/web/: package.json
lab4/web/src/: core.js  core.wasm  index.html  index.js  methods.js  options.js  styles.scss
methods/: Brent.h  Dichotomy.cpp  Dichotomy.h  GoldenRatio.h
report/tex/: main.tex
web/: package-lock.json  package.json  webpack.config.js
web/src/: core.js  core.wasm  index.html  index.js  methods.js  renderUtils.js  styles.scss
